// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBox /> should render 1`] = `
<div
  className=""
>
  <label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <Search
      className="leftAccessory searchIcon"
    />
    <input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      spellCheck={true}
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`<SearchBox /> should render loading state 1`] = `
<div
  className=""
>
  <label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <div
      className="leftAccessory spinnerContainer"
    >
      <LoadingSpinner
        className="spinner"
        small={true}
      />
    </div>
    <input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      spellCheck={true}
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`<SearchBox /> should render with value and placeholder 1`] = `
<div
  className=""
>
  <label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <Search
      className="leftAccessory searchIcon"
    />
    <X
      className="removeInput"
      data-testid="removeInputBtn"
      onClick={[Function]}
      pointerEvents="bounding-box"
    />
    <input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Testing testing 123"
      spellCheck={true}
      type="search"
      value="Hello world"
    />
  </form>
</div>
`;
